<resources>
    <string name="lib_name">超级入口</string>

    <string name="msg_camera_framework_bug">相机被占用或没有相机权限，请检查</string>
    <string name="button_ok">退出</string>
    <string name="btn_cancel">取消</string>
    <string name="share_string">分享</string>
    <string name="save_string">保存</string>
    <string name="tv_notify">提 示</string>
    <string name="str_version_upgrade">版本更新</string>
    <string name="alert_dialog_net_fail">抱歉，暂时无法处理您的请求，请检查网络连接。</string>
    <string name="alert_tips_title">温馨提示</string>
    <string name="btn_fujian">附件</string>
    <string name="btn_take_pic">拍照</string>
    <string name="btn_album">相册</string>

    <!--文件选择器-->
    <string name="tx_file_size">已选%1$s</string>
    <string name="tx_file_send">发送(%1$s/9)</string>
    <string name="tx_file_count">共%1$s个文件</string>
    <string name="appproval_attach">上传附件</string>

    <string name="listEmpty">当前内容为空</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新…</string>
    <string name="p2refresh_doing_end_refresh">加载中…</string>
    <string name="p2refresh_refresh_lasttime">最近更新 : </string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_end_load_more">更    多</string>
</resources>
