<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/normalBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/tv_notify"
        android:visibility="gone"
        android:textColor="@color/darkgrey" />
    
       <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shape_line" />

    <TextView
        android:id="@+id/btn_take_fujian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/btn_fujian"
        android:textColor="@color/color_248bfe"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shape_line" />

    <TextView
        android:id="@+id/btn_take_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/btn_take_pic"
        android:textColor="@color/color_248bfe"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shape_line" />

    <TextView
        android:id="@+id/btn_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/btn_album"
        android:textColor="@color/color_248bfe"
        android:textSize="15sp" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shape_line" />


    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/btn_cancel"
        android:textColor="@color/color_60000000"
        android:textSize="15sp" />

</LinearLayout>